# llm-interface

./: README.md  pyproject.toml
core/: __init__.py  agent.py  llm.py  runtime.py
core/prompts/: weather.yaml
core/tests/: contract_test_weather_db.py
examples/: mock_adapter.py  run_demo.py  test_mock_adapter.py
weather_agent_core/: __init__.py  agent.py  llm.py  ports.py  runtime.py
weather_agent_core/tests/: contract_test_weather_db.py
