[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-agent-core"
version = "0.1.0"
description = "A minimal LLM Agent Core demo with dependency injection"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.0,<2",
    "langchain-aws>=1.0,<2",
    "mlflow>=2.15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["core/tests", "examples"]
